--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Blashpemy Kid</title>
-        <link rel="stylesheet" href="stylez.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=MedievalSharp">
         <script src="script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
