--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Blasphemy Kid Terms</title>
-        <link rel="stylesheet" href="stylez.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=MedievalSharp">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-length, initial-scale=1.0">
